--- a/inicio.css
+++ b/inicio.css
@@ -4,6 +4,11 @@
     border: 0;
 }
 
+a {
+    text-decoration: none;
+    color: #000;
+}
+
 .topo {
     display: flex;
     justify-content: center;
@@ -116,17 +121,18 @@ span {
 .logoGrande {
     width: auto;
     height: 300px;
-    text-align: justify;
+    margin-right: 100px;
 }
 
 span2 {
     align-items: center;
     justify-content: center;
+    display: flex;
+    font: 800 90px #134681;
 }
 
 .sobreNos2 {
     align-items: center;
-    text-align: center;
     justify-content: center;
     margin-right: 120px;
     margin-left: 120px;
@@ -135,4 +141,77 @@ span2 {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    text-align: justify;
+}
+
+.cartao {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 150px;
+}
+
+.cartaoIMG {
+    width: 820px;
+    height: 505px;
+}
+
+.pagamento {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #FFF;
+    text-align: center;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    background-color: #134681;
+    height: 505px;
+    width: 800px;
+}
+
+span3 {
+    color: #FFF;
+    text-align: center;
+    font-size: 46px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    margin-top: 10px;
+}
+
+.rodape {
+    width: 200px;
+    height: auto;
+}
+
+.direitos {
+    margin-top: 10px;
+    color: #000;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.icone {
+    width: 36px;
+    height: 36px;
+    padding: 8px;
+}
+
+.conta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
