--- a/lojas.css
+++ b/lojas.css
@@ -8,6 +8,7 @@ a {
     text-decoration: none;
     color: #000;
 }
+
 body {
     font-family: 'Seoul';
 }
@@ -16,6 +17,7 @@ body {
     font-family: 'Seoul';
     src: url(SeoulHangang\ CBL\ Regular.ttf);
 }
+
 .topo {
     display: flex;
     justify-content: center;
@@ -58,47 +60,45 @@ span {
 }
 
 .imagem1 {
+    margin-top: 30px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-}
-
-.box2 {
-    background-color: #CFDBE7;
-    height: 563px;
-    width: 200px;
-    margin-top: 25px;
-    margin-right: 5px;
+    justify-content: space-around;
 }
 
 .box1 {
-    background-color: #0F3365;
+    width: 500px;
     height: 563px;
-    width: 200px;
-    margin-top: 25px;
+    background-color: #134681;
 }
 
-.carro {
-    margin-top: 25px;
+.nossasLojas {
     width: 1126px;
     height: 563px;
-    align-items: center;
-    display: flex;
 }
 
-.NossosProdutos {
-    color: #000;
+.texto1 {
+    color: #FFF;
     text-align: center;
     font-size: 64px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    justify-content: center;
-    margin-top: 60px;
+    background-color: #134681;
+    padding: 90px;
+    height: 384px;
 }
 
-.produtos1 {
+.senna2 {
+    display: flex;
+    color: #000;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+    font: 300 25px black;
+}
+
+
+.lojas1 {
     display: flex;
     flex-direction: column;
     padding: 40px;
@@ -107,12 +107,12 @@ span {
 }
 
 .roda {
-    width: 192px;
-    height: 200px;
+    width: 242px;
+    height: 250px;
     padding: 35px;
 }
 
-.produtos2 {
+.lojas2 {
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -120,15 +120,14 @@ span {
     align-items: center;
 }
 
-.produtos {
+.lojas {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-top: 70px;
-
+    margin-top: 90px;
 }
 
-.produtos3  {
+.lojas3 {
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -137,14 +136,91 @@ span {
 }
 
 .cada {
-    border: 4px solid #0F3365;
+    border: solid 2px black;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
-    border-radius: 15px;
+    padding: 20px;
+    margin: 20px;
+    margin: 20px;
+    background-color: #134681;
 }
 
 .pneu2 {
     padding: 20px;
+    font: 700 20px white;
+    color: #ffffff;
+}
+
+.pneu3 {
+    padding: 20px;
+    font: 700 20px white;
+    color: #ffffff;
+}
+
+.pneu4 a {
+    padding: 20px;
+    font: 700 20px white;
+    color: #ffffff;
+}
+
+.cartao {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 150px;
+}
+
+.cartaoIMG {
+    width: 820px;
+    height: 505px;
+}
+
+.pagamento {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #FFF;
+    text-align: center;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    background-color: #134681;
+    height: 505px;
+    width: 800px;
+}
+
+span3 {
+    color: #FFF;
+    text-align: center;
+    font-size: 46px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    margin-top: 10px;
+}
+
+.rodape {
+    width: 200px;
+    height: auto;
+}
+
+.direitos {
+    margin-top: 10px;
+    color: #000;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
